[package]
name = "ggufscan"
version = "0.1.1"
edition = "2021"
description = "Easily find and delete GGUF model files from your HDD."
authors = ["duck4i"]
license = "MIT"
repository = "https://github.com/duck4i/ggufscan"
keywords = ["gguf", "scan", "hdd", "cleanup", "utilities"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
ignore = "0.4.23"
num_cpus = "1.16.0"
ratatui = "0.29.0"
rayon = "1.10.0"
